--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -1,5 +1,5 @@
-:root,
-.#{$button} {
+:where(:root),
+:where(.#{$button}) {
   --#{$button}--Display: inline-block;
   --#{$button}--PaddingTop: var(--pf-t--global--spacer--sm);
   --#{$button}--PaddingRight: var(--pf-t--global--spacer--lg);
@@ -114,21 +114,29 @@
   --#{$button}--m-plain--PaddingRight: var(--pf-t--global--spacer--sm);
   --#{$button}--m-plain--PaddingBottom: var(--pf-t--global--spacer--sm);
   --#{$button}--m-plain--PaddingLeft: var(--pf-t--global--spacer--sm);
-  --#{$button}--m-plain--m-small--PaddingTop: var(--pf-t--global--spacer--xs);
-  --#{$button}--m-plain--m-small--PaddingRight: var(--pf-t--global--spacer--xs);
-  --#{$button}--m-plain--m-small--PaddingBottom: var(--pf-t--global--spacer--xs);
-  --#{$button}--m-plain--m-small--PaddingLeft: var(--pf-t--global--spacer--xs);
   --#{$button}--m-plain--Color: var(--pf-t--global--icon--color--regular);
   --#{$button}--m-plain--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
+  --#{$button}--m-plain--MixBlendMode: var(--pf-t--global--background--color--action--plain--hover--blend);
+  --#{$button}--m-plain--MinWidth: calc(1em * var(--#{$button}--LineHeight) + var(--#{$button}--m-plain--PaddingTop) + var(--#{$button}--m-plain--PaddingBottom));
   --#{$button}--m-plain--hover--Color: var(--pf-t--global--icon--color--regular);
   --#{$button}--m-plain--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--hover);
   --#{$button}--m-plain--m-clicked--Color: var(--pf-t--global--icon--color--regular);
   --#{$button}--m-plain--m-clicked--BackgroundColor: var(--pf-t--global--background--color--action--plain--clicked);
   --#{$button}--m-plain--disabled--Color: var(--pf-t--global--icon--color--on-disabled);
+  --#{$button}--m-plain--m-small--PaddingTop: var(--pf-t--global--spacer--xs);
+  --#{$button}--m-plain--m-small--PaddingRight: var(--pf-t--global--spacer--xs);
+  --#{$button}--m-plain--m-small--PaddingBottom: var(--pf-t--global--spacer--xs);
+  --#{$button}--m-plain--m-small--PaddingLeft: var(--pf-t--global--spacer--xs);
+  --#{$button}--m-plain--m-no-padding--MixBlendMode: normal;
+  --#{$button}--m-plain--m-no-padding--MinWidth: auto;
+  --#{$button}--m-plain--m-no-padding--PaddingTop: 0;
+  --#{$button}--m-plain--m-no-padding--PaddingRight: 0;
+  --#{$button}--m-plain--m-no-padding--PaddingBottom: 0;
+  --#{$button}--m-plain--m-no-padding--PaddingLeft: 0;
+  --#{$button}--m-plain--m-no-padding--BackgroundColor: transparent;
+  --#{$button}--m-plain--m-no-padding--hover--BackgroundColor: transparent;
+  --#{$button}--m-plain--m-no-padding--m-clicked--BackgroundColor: transparent;
   --#{$button}__progress--Color: var(--#{$button}__icon--Color);
-  --#{$button}--m-plain--MixBlendMode: var(--pf-t--global--background--color--action--plain--hover--blend);
-  --#{$button}--m-plain--MinWidth: calc(1em * var(--#{$button}--LineHeight) + var(--#{$button}--m-plain--PaddingTop) + var(--#{$button}--m-plain--PaddingBottom));
-
 
   // Control
   --#{$button}--m-control--BorderRadius: var(--pf-t--global--border--radius--small);
@@ -524,9 +532,16 @@
     --#{$button}__progress--Color: var(--#{$button}--m-in-progress--m-plain--Color);
 
     &.pf-m-no-padding {
-      min-width: auto;
-      padding: 0;
-      background-color: transparent;
+      --#{$button}--BackgroundColor: var(--#{$button}--m-plain--m-no-padding--BackgroundColor);
+      --#{$button}--hover--BackgroundColor: var(--#{$button}--m-plain--m-no-padding--hover--BackgroundColor);
+      --#{$button}--m-clicked--BackgroundColor: var(--#{$button}--m-plain--m-no-padding--m-clicked--BackgroundColor);
+      --#{$button}--m-plain--PaddingTop: var(--#{$button}--m-plain--m-no-padding--PaddingTop);
+      --#{$button}--m-plain--PaddingRight: var(--#{$button}--m-plain--m-no-padding--PaddingRight);
+      --#{$button}--m-plain--PaddingBottom: var(--#{$button}--m-plain--m-no-padding--PaddingBottom);
+      --#{$button}--m-plain--PaddingLeft: var(--#{$button}--m-plain--m-no-padding--PaddingLeft);
+      --#{$button}--m-plain--MixBlendMode: var(--#{$button}--m-plain--m-no-padding--MixBlendMode);
+
+      min-width: var(--#{$button}--m-plain--m-no-padding--MinWidth);
     }
 
     min-width: var(--#{$button}--m-plain--MinWidth);
