--- a/src/patternfly/components/Label/examples/Label.css
+++ b/src/patternfly/components/Label/examples/Label.css
@@ -1,9 +1,13 @@
 #ws-core-c-label-filled .ws-preview-html,
+#ws-core-c-label-outline .ws-preview-html,
+#ws-core-c-label-compact .ws-preview-html,
 #ws-core-c-label-overflow .ws-preview-html {
   margin: -4px;
 }
 
 #ws-core-c-label-filled .pf-v5-c-label,
+#ws-core-c-label-outline .pf-v5-c-label,
+#ws-core-c-label-compact .pf-v5-c-label,
 #ws-core-c-label-overflow .pf-v5-c-label {
   margin: 4px;
 }
