feat(Tile): fix ids really this time

--- a/src/patternfly/components/Tile/tile-img-pf.hbs
+++ b/src/patternfly/components/Tile/tile-img-pf.hbs
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<svg width="1em" height="1em" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="2.59em" height="1em" viewBox="0 0 140 54">
 <g>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M15.6522 0H40V24.3478H37.3913C25.3851 24.3478 15.6522 14.6149 15.6522 2.6087V0Z" fill="#0066CC"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M40 0.869568L16.5217 40H34.9367C37.7331 40 40 37.7331 40 34.9367V0.869568Z" fill="url(#paint0_linear_6460_7774-{{tile--id}})"/>
