--- a/src/patternfly/components/ClipboardCopy/clipboard-copy.scss
+++ b/src/patternfly/components/ClipboardCopy/clipboard-copy.scss
@@ -12,7 +12,7 @@
   --#{$clipboard-copy}__expandable-content--PaddingRight: var(--pf-t--global--spacer--md);
   --#{$clipboard-copy}__expandable-content--PaddingBottom: var(--pf-t--global--spacer--md);
   --#{$clipboard-copy}__expandable-content--PaddingLeft: var(--pf-t--global--spacer--md);
-  --#{$clipboard-copy}__expandable-content--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
+  --#{$clipboard-copy}__expandable-content--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$clipboard-copy}__expandable-content--BorderTopWidth: var(--pf-t--global--border--width--control--default);
   --#{$clipboard-copy}__expandable-content--BorderRightWidth: var(--pf-t--global--border--width--control--default);
   --#{$clipboard-copy}__expandable-content--BorderBottomWidth: var(--pf-t--global--border--width--control--default);
