--- a/src/patternfly/components/Tabs/__tabs-all.hbs
+++ b/src/patternfly/components/Tabs/__tabs-all.hbs
@@ -31,6 +31,6 @@
   {{#> tabs tabs--id=(concat __tabs-all--id "-secondary-primary-example") tabs--modifier="pf-m-scrollable"}}
     {{> __tabs-list}}
   {{/tabs}}
-  {{#> tabs tabs--id=(concat __tabs-all--id "-secondary-secondary-example") tabs--modifier="pf-m-scrollable" tabs--IsSecondary="true"}}
+  {{#> tabs tabs--id=(concat __tabs-all--id "-secondary-secondary-example") tabs--modifier="pf-m-scrollable" tabs--IsSubtab="true"}}
     {{> __tabs-list}}
   {{/tabs}}
