--- a/src/patternfly/components/Label/label.scss
+++ b/src/patternfly/components/Label/label.scss
@@ -1,7 +1,7 @@
 // @debug $label; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 @import '../../sass-utilities/all';
 
-:root,
+:where(:root),
 :where(.#{$label}) {
   --#{$label}--PaddingTop: var(--pf-t--global--spacer--xs);
   --#{$label}--PaddingRight: var(--pf-t--global--spacer--sm);
